syntax = "proto3";

option csharp_namespace = "Discount.Application";

package coupon;

service CoupongRPCService {
  rpc AddCoupon (Coupon) returns (Coupon);
  rpc UpdateCoupon (Coupon) returns (Coupon);
  rpc DeleteCoupon(DeleteCouponRequest) returns (DeleteCouponResponse);
  rpc GetCoupon(GetCouponRequest) returns (Coupon);
  rpc GetDiscount(GetDiscountRequest) returns (Coupon);
}

message Coupon {
  int32 id = 1;
  string couponCode = 2;
  string productId = 3;
  int64 Amount = 4;
  bool isApplied = 5;
}

message GetDiscountRequest {
  string couponCode = 1;
}

message GetCouponRequest {
  int32 couponId = 1;
}

message DeleteCouponRequest {
  int32 couponId = 1;
}

message DeleteCouponResponse {
  bool success = 1;
}